--- a/views/main.html
+++ b/views/main.html
@@ -15,15 +15,15 @@
                     <div>
                         <label id="img-label" for="img">사진 업로드</label>
                         <input id="img" type="file" accept="image/*">
-                        <button id="twit-btn" type="submit" class="btn">짹짹</button>
+                        <button id="twit-btn" type="submit" class="btn btn-primary">짹짹</button>
                     </div>
                 </form>
             </div>
         {% endif %}
         <div class="twits">
             <form id="hashtag-form" action="/hashtag">
-                <input type="text" name="hasgtag" placeholder="태그 검색">
-                <button class="btn">검색</button>
+                <input name="hasgtag" class="form-control form-control-sm" type="text" placeholder="태그 검색" id="inputSmall">
+                <button class="btn btn-primary btn-sm">검색</button>
             </form>
             {% for twit in twits %}
                 <div class="twit">
@@ -31,7 +31,7 @@
                     <input type="hidden" value="{{twit.id}}" class="twit-id">
                     <div class="twit-author">{{twit.User.nick}}</div>
                     {% if not followerIdList.includes(twit.User.id) and twit.User.id !== user.id %}
-                        <button class="twit-follow">팔로우하기</button>
+                        <button class="btn btn-primary">팔로우하기</button>
                     {% endif %}
                     <div class="twit-content">{{twit.content}}</div>
                     {% if twit.img %}
