--- a/views/layout.html
+++ b/views/layout.html
@@ -9,7 +9,7 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="bootstrap.min.css">
+        <link rel="stylesheet" href="bootstrap.css">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -74,11 +74,11 @@
                         </div>
                         <div class="half">
                             <div>팔로워</div>
-                            <div class="count follower-count">{{folowerCount}}</div>
+                            <div class="count follower-count">{{followerCount}}</div>
                         </div>
                     <input id="my-id" type="hidden" value="{{user.id}}">
-                    <a id="my-profile" href="/profile" class="btn">내 프로필</a>
-                    <a id="logout" href="/auth/logout" class="btn">로그아웃</a>
+                    <a id="my-profile" href="/profile" class="btn btn-outline-primary">내 프로필</a>
+                    <a id="logout" href="/auth/logout" class="btn btn-secondary">로그아웃</a>
                 {% else %}
                     <form id="login-form" action="/auth/login" method="post">
                         <div class="form-group">
