--- a/views/main.html
+++ b/views/main.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    <div class="timeline">
+    <div class="timeline" style="text-align: left; padding: 10px; margin-right: 10px; border-radius: 4px; border: 1px solid silver;">
         {% if user %}
             <div>
                 <form id="twit-form" action="/post" method="post" enctype="multipart/form-data" style="padding: 10px; overflow: hidden;">
@@ -21,22 +21,23 @@
             </div>
         {% endif %}
         <div class="twits" style="padding: 10px; position: relative; margin-bottom: 10px;">
-            <form id="hashtag-form" action="/hashtag">
-                <input name="hashtag" class="form-control form-control-sm" type="text" placeholder="태그 검색" id="inputSmall">
+            <form id="hashtag-form" action="/hashtag" style="text-align: right;">
+                <input name="hashtag" type="text" placeholder="태그 검색" id="inputSmall">
                 <button class="btn btn-primary btn-sm">검색</button>
             </form>
             {% for twit in twits %}
-                <div class="twit">
+                <div class="twit" style="border: 1px solid silver; border-radius: 4px; padding: 10px; position: relative; margin-bottom: 10px;">
                     <input type="hidden" value="{{twit.User.id}}" class="twit-user-id">
                     <input type="hidden" value="{{twit.id}}" class="twit-id">
-                    <div class="twit-author">{{twit.User.nick}}</div>
+                    <div class="twit-author" style="display: inline-block; font-weight: bold;" margin-right: 10px;>{{twit.User.nick}}</div>
                     {% if not followerIdList.includes(twit.User.id) and twit.User.id !== user.id %}
-                        <button class="btn btn-primary">팔로우하기</button>
+                        <button class="twit-follow btn btn-primary">팔로우하기</button>
                     {% endif %}
                     <div class="twit-content">{{twit.content}}</div>
                     {% if twit.img %}
                         <div class="twit-img"><img src="{{twit.img}}" alt="섬네일"></div>
                     {% endif %}
+                    <button class="btn btn-secondary btn-sm">삭제</button>
                 </div>
             {% endfor %}
         </div>
