팔로우, 해시태그 검색

--- a/views/main.html
+++ b/views/main.html
@@ -37,7 +37,7 @@
                     {% if twit.img %}
                         <div class="twit-img"><img src="{{twit.img}}" alt="섬네일"></div>
                     {% endif %}
-                    <button class="btn btn-secondary btn-sm">삭제</button>
+                    <!-- <button class="btn btn-secondary btn-sm">삭제</button> -->
                 </div>
             {% endfor %}
         </div>
